# rts-engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
docs/: notes.md
resources/shaders/: chunk_frag.glsl  chunk_vert.glsl
source/: application.h  camera.h  chunk.h  chunk_atlas.h  chunk_manager.h  debug_screen.h  main.cpp  shader.h  types.h
